# autopremise

./: Cargo.toml  README.md
src/: command_line.rs  main.rs
src/configuration/: log4rs.yaml  mod.rs  user.rs
src/premise/: Cargo.toml
src/premise/src/: client.rs  lib.rs  user.rs
src/premise/src/api/: campaign.rs  currency.rs  estimated_duration.rs  google.rs  image.rs  mod.rs  monitoring.rs  number.rs  option.rs  requirement.rs  service_data.rs  time.rs  update.rs
src/premise/src/api/form_localization/: mod.rs
src/premise/src/api/form_localization/group/: input.rs  mod.rs  output.rs
src/premise/src/api/form_localization/relevance/: mod.rs  predicate.rs
src/premise/src/api/form_localization/survey/: locale.rs  mod.rs
src/premise/src/api/form_localization/survey/context/: mod.rs
src/premise/src/api/location/: accuracy.rs  mod.rs  mode.rs  upload.rs
src/premise/src/api/price/: amount.rs  mod.rs
src/premise/src/api/task/: mod.rs
src/premise/src/api/task/reserve/: mod.rs  request.rs  response.rs
src/premise/src/api/task/submission/: mod.rs  request.rs  response.rs
src/premise/src/api/task/sync/: mod.rs  request.rs
src/premise/src/api/task/sync/response/: mod.rs  reservation.rs
src/premise/src/api/user/: mod.rs  name.rs  network_configuration.rs
src/premise/src/api/user/token/: mod.rs  request.rs  response.rs
src/premise/src/result/: error.rs  mod.rs
src/premise/src/task/: generator.rs  mod.rs  survey.rs
