[package]
name = "autopremise"
authors = ["Amit Bashan"]
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "*"
clap = { version = "*", features = ["derive"] }
futures = "*"
premise = { path = "src/premise" }
serde = "*"
serde_derive = "*"
serde_json = "*"
tokio = { version = "*", features = ["full"] }
tracing = "*"
tracing-subscriber = "*"
